[gd_scene load_steps=2 format=3 uid="uid://cxqwe4fdtvrm1"]

[ext_resource type="Script" path="res://Scripts/settings_screen.gd" id="1_setsqd"]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_setsqd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.160784, 0.239216, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1

[node name="HBoxSound" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxSound"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Sound Effects"

[node name="BtnSound" type="CheckButton" parent="VBoxContainer/HBoxSound"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
button_pressed = true
text = "On"

[node name="HBoxMusic" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxMusic"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Music"

[node name="BtnMusic" type="CheckButton" parent="VBoxContainer/HBoxMusic"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
button_pressed = true
text = "On"

[node name="HBoxGrid" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxGrid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Grid Size"

[node name="OptionGrid" type="OptionButton" parent="VBoxContainer/HBoxGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
item_count = 2
selected = 0
popup/item_0/text = "4x4"
popup/item_0/id = 0
popup/item_1/text = "6x6"
popup/item_1/id = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BtnBack" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back to Menu"

[connection signal="toggled" from="VBoxContainer/HBoxSound/BtnSound" to="." method="_on_btn_sound_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxMusic/BtnMusic" to="." method="_on_btn_music_toggled"]
[connection signal="item_selected" from="VBoxContainer/HBoxGrid/OptionGrid" to="." method="_on_option_grid_item_selected"]
[connection signal="pressed" from="VBoxContainer/BtnBack" to="." method="_on_btn_back_pressed"]
